--- a/mystyle.css
+++ b/mystyle.css
@@ -25,13 +25,12 @@ video{
 }
 #content{
   margin: auto;
-  margin-top: 100px;
+  /*margin-top: 100px;*/
   /*width: 80%;*/
 }
 #image{
-  width: 250px;
-  margin: auto;
-  margin-top: 100px;
+    margin: auto;
+    margin-top: -350px;
 }
 .intro-header{
   background: url('images/capture3.png');
